--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 remote_theme: QuaereMe/Balzac-for-Jekyll
 title: Quaere Me
-description: MBA & API musings from Christopher Bartz
+description: MBA & API musings by Christopher Bartz
